--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <scm>
+        <developerConnection>scm:git:https://github.com/axelfontaine/sourcetalk-2.git</developerConnection>
+    </scm>
 
     <distributionManagement>
         <repository>
